just minor changes 1.0

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Sharewheels | Book and Give Rides</title>
+	<title>ShareWheels | Book and Give Rides</title>
 
 	<!-- Import External files -->
 	<link rel="stylesheet" href="./assets/css/index.css">
@@ -22,7 +22,7 @@
 	<div class="navbar">
 		<div id="background"></div>
 		<div class="container">
-			<p id="logo">Share <span>Wheels</span></p>
+			<p id="logo">Share<span>Wheels</span></p>
 			
 			<div class="links">
 				<a href="./about.html">ABOUT US</a>
@@ -150,7 +150,7 @@
 				<div id="links-row">
 					<p id="head">Help</p>
 					<a href="about">Help Manual</a>
-					<a href="help">How to Booka Ride?</a>
+					<a href="help">How to Book a Ride?</a>
 					<a href="help">Documentation</a>
 				</div>
 			</div>
@@ -170,7 +170,7 @@
 		</div>
 	</div>
 	<div class="footer-end">
-		<p>Copyright 2023 and that C icon.</p>
+		<p>Copyright 2023 @ShareWheels</p>
 		<a href="IDK">Terms and Conditions</a>
 	</div>
 
