--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 	<!-- About -->
 	<div class="about">
-		<p id="logo">Share <span>Wheels</span></p>
+		<p id="logo">Share<span>Wheels</span></p>
 		<p id="body">
 			ShareWheels is not just a organization but a individual will for social work to help
 			those in need. Do I need to write more about It here? 'cauze I dont know much about 
@@ -136,7 +136,7 @@
 				<div id="links-row">
 					<p id="head">About</p>
 					<a href="about">About</a>
-					<a href="help">Orignals</a>
+					<a href="help">Originals</a>
 					<a href="help">Documentation</a>
 				</div>
 
