--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 	<!-- Poster -->
 	<div class="poster">
 		<img src="./assets/img/poster.png">
-		<p>Build Around Community.</p>
-		<a href="joincommunity.html"><button>joincommunity</button></a>
+		<p>Build Around Communities <br>
+	 <a href="joincommunity.html"><button>Join A Community</button></a></p>
 	</div>
 
 
@@ -164,8 +164,8 @@
 				<p>People that Connect.</p>
 			</div>
 			<div id="socialmedia">
-				<a href="link to insta"><i class="fab fa-instagram"></i></a>
-				<a href="link to twritter"><i class="fab fa-twitter"></i></a>
+				<a href="https://instagram.com/sharewheels_?igshid=YTQwZjQ0NmI0OA=="><i class="fab fa-instagram"></i></a>
+				<a href="https://x.com/sharewheels_?t=VCpvvneuDwsGmi0_31W-9w&s=08"><i class="fab fa-twitter"></i></a>
 				<a href="link to discord"><i class="fab fa-discord"></i></a>
 			</div>
 		</div>
