sign and login page added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<p id="logo">Share<span>Wheels</span></p>
 			
 			<div class="links">
+				<a href="signup.html">SIGNUP/LOGIN</a>
 				<a href="./about.html">ABOUT US</a>
 				<div id="givetake-buttons">
 					<div id="button-container">
