home button on giveride

--- a/bookride.html
+++ b/bookride.html
@@ -26,6 +26,7 @@
 			<p id="logo">Share <span>Wheels</span></p>
 			
 			<div class="links">
+                <a href="index.html">HOME</a>
 				<a href="./about.html">ABOUT US</a>
 				<div id="givetake-buttons">
 					<div id="button-container">
@@ -55,7 +56,7 @@
                 <input type="search" placeholder="Search for places..." style="width: 300px;" onclick="function1()">
                 <button><i class="fas fa-search"></i></button>
             </div>
-            <p id="head">Short By</p>
+            <p id="head">Sort By</p>
             <div class="price">
                 <input id="range-slider" type="range">
                 <div id="price-range">
@@ -168,7 +169,7 @@
 				<div id="links-row">
 					<p id="head">Help</p>
 					<a href="about">Help Manual</a>
-					<a href="help">How to Booka Ride?</a>
+					<a href="help">How to Book a Ride?</a>
 					<a href="help">Documentation</a>
 				</div>
 			</div>
