--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</div>
 					<p>RIDE</p>
 				</div>
-				<a href="./help.html">HELP</a>
+				<a href="./faq.html">FAQ</a>
 				</div>
 		</div>
 	</div>
