backend setup modified for localhost database

--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
     
    <div class="wrapper">
     <div class="form-container sign-up">
-        <form action="" method="POST">
+        <form action="/" method="POST">
             <h2>sign up</h2>
             <div class="form-group">
                 <input type="text" name="username" required>
@@ -40,7 +40,7 @@
         </form>
     </div>
     <div class="form-container sign-in">
-        <form action="#">
+        <form action="/">
             <h2>login</h2>
             <div class="form-group">
                 <input type="text" required>
@@ -62,7 +62,7 @@
         </form>
     </div>
    </div>
-
+   <script src="./backend-setup-signup-page/node_modules/mysqlsignup.js"></script>
     <script src="./assets/js/signup.js"></script>
 </body>
 </html>
