--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>ShareWheels | Book and Give Rides</title>
+	<title>Sharewheels | Book and Give Rides</title>
 
 	<!-- Import External files -->
 	<link rel="stylesheet" href="./assets/css/index.css">
@@ -22,10 +22,10 @@
 	<div class="navbar">
 		<div id="background"></div>
 		<div class="container">
-			<p id="logo">Share<span>Wheels</span></p>
+			<p id="logo">Share <span>Wheels</span></p>
 			
 			<div class="links">
-				<a href="signup.html">SIGNUP/LOGIN</a>
+				<a id="current" href="./index.html">HOME</a>
 				<a href="./about.html">ABOUT US</a>
 				<div id="givetake-buttons">
 					<div id="button-container">
@@ -34,8 +34,15 @@
 					</div>
 					<p>RIDE</p>
 				</div>
-				<a href="./faq.html">FAQ</a>
+				<a href="./faq.html">HELP</a>
+			</div>
+			<div class="login">
+				<a href="signup.html">Login<span><i class="fas fa-chevron-down"></i></span></a>
+				<div class="login-menu">
+					<p> Don't have accout? create one</p>
+					<a href="signup">Create Account</a>
 				</div>
+			</div>
 		</div>
 	</div>
 
@@ -43,8 +50,15 @@
 		<img src="./assets/img/wallpaper1.jpg">
 		<p id="message">Just Search, Choose and Go</p>
 		<div class="search-bar">
-			<input type="search" placeholder="Search for places..." style="width: 300px;" onclick="function1()">
-			<button><i class="fas fa-search"></i></button>
+			<div id="places">
+				<input type="search" placeholder="Search for places..." onclick="function1()">
+			</div>
+			<div id="datetime">
+				<span class="datepicker-toggle-button"><i class="fas fa-calendar-alt"></i></span>
+				<input type="date" onclick="function1()">
+			</div>
+			<button><i class="fas fa-search"></i></button>			
+
 		</div>
 	</div>
 
@@ -89,14 +103,13 @@
 	<!-- Poster -->
 	<div class="poster">
 		<img src="./assets/img/poster.png">
-		<p>Build Around Communities <br>
-	 <a href="joincommunity.html"><button>Join A Community</button></a></p>
+		<p>Build Around Community.</p>
 	</div>
 
 
 	<!-- About -->
 	<div class="about">
-		<p id="logo">Share<span>Wheels</span></p>
+		<p id="logo">Share <span>Wheels</span></p>
 		<p id="body">
 			ShareWheels is not just a organization but a individual will for social work to help
 			those in need. Do I need to write more about It here? 'cauze I dont know much about 
@@ -138,7 +151,7 @@
 				<div id="links-row">
 					<p id="head">About</p>
 					<a href="about">About</a>
-					<a href="help">Originals</a>
+					<a href="help">Orignals</a>
 					<a href="help">Documentation</a>
 				</div>
 
@@ -152,7 +165,7 @@
 				<div id="links-row">
 					<p id="head">Help</p>
 					<a href="about">Help Manual</a>
-					<a href="help">How to Book a Ride?</a>
+					<a href="help">How to Booka Ride?</a>
 					<a href="help">Documentation</a>
 				</div>
 			</div>
@@ -165,14 +178,14 @@
 				<p>People that Connect.</p>
 			</div>
 			<div id="socialmedia">
-				<a href="https://instagram.com/sharewheels_?igshid=YTQwZjQ0NmI0OA=="><i class="fab fa-instagram"></i></a>
-				<a href="https://x.com/sharewheels_?t=VCpvvneuDwsGmi0_31W-9w&s=08"><i class="fab fa-twitter"></i></a>
+				<a href="link to insta"><i class="fab fa-instagram"></i></a>
+				<a href="link to twritter"><i class="fab fa-twitter"></i></a>
 				<a href="link to discord"><i class="fab fa-discord"></i></a>
 			</div>
 		</div>
 	</div>
 	<div class="footer-end">
-		<p>Copyright 2023 @ShareWheels</p>
+		<p>Copyright 2023 and that C icon.</p>
 		<a href="IDK">Terms and Conditions</a>
 	</div>
 
