added a chatbot which will be modified later

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 		</div>
 	</div>
 
+	
+	
 	<div class="wallpaper">
 		<img src="./assets/img/wallpaper1.jpg">
 		<p id="message">Just Search, Choose and Go</p>
@@ -190,6 +192,19 @@
 	</div>
 
 	<script src="./assets/js/index.js"></script>
-
+   
+		<script>
+window.embeddedChatbotConfig = {
+chatbotId: "5tkGmuYKE-xp776hBEbTS",
+domain: "www.chatbase.co"
+}
+</script>
+<script
+src="https://www.chatbase.co/embed.min.js"
+chatbotId="5tkGmuYKE-xp776hBEbTS"
+domain="www.chatbase.co"
+defer>
+</script>
+	
 </body>
 </html>
