--- a/bookride.html
+++ b/bookride.html
@@ -35,7 +35,7 @@
 					</div>
 					<p>RIDE</p>
 				</div>
-				<a href="./help.html">HELP</a>
+				<a href="./faq.html">HELP</a>
 				</div>
                 <div class="login">
                     <a href="signup.html">Login<span><i class="fas fa-chevron-down"></i></span></a>
