added bot in bookride

--- a/bookride.html
+++ b/bookride.html
@@ -199,6 +199,6 @@
 		<p>Copyright 2023 and that C icon.</p>
 		<a href="IDK">Terms and Conditions</a>
 	</div>
-
+    <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>6573fd8491144160ce314cc4,6573fd21478d273f284ecb90</script>
 </body>
 </html>
