FAQ ans,homepage gallery,giveride,join comm button

--- a/index.html
+++ b/index.html
@@ -47,9 +47,16 @@
 	</div>
 
 	
-	
+
 	<div class="wallpaper">
-		<img src="./assets/img/wallpaper1.jpg">
+		
+		<ul class="slideshow">
+			<li><div></div></li>
+		    <li><div></div></li>
+			<li><div></div></li>
+			<li><div></div></li>
+			<li><div></div></li>
+		</ul> 
 		<p id="message">Just Search, Choose and Go</p>
 		<div class="search-bar">
 			<div id="places">
@@ -60,9 +67,9 @@
 				<input type="date" onclick="function1()">
 			</div>
 			<button><i class="fas fa-search"></i></button>			
-
+			
 		</div>
-	</div>
+	</div> 
 
 	<div class="features">
 		<p id="heading">ShareWheels Features</p>
@@ -105,9 +112,24 @@
 	<!-- Poster -->
 	<div class="poster">
 		<img src="./assets/img/poster.png">
-		<p>Build Around Community.</p>
+		<p>Build Around Community.
+			<br>
+			<a href="https://discord.gg/J4HgxqPBVe"><button>Click to join one.</button></a>
+		</p>
 	</div>
-
+   <style>
+	button{
+		text-align: center;
+		background-color: brown;
+		font-family: 'Courier New', Courier, monospace;
+		color: aqua;
+		position: absolute;
+		left: 26%;
+		top: 99%;
+		padding: 10px;
+		font-size: large;
+	}
+   </style>
 
 	<!-- About -->
 	<div class="about">
@@ -180,15 +202,14 @@
 				<p>People that Connect.</p>
 			</div>
 			<div id="socialmedia">
-				<a href="link to insta"><i class="fab fa-instagram"></i></a>
-				<a href="link to twritter"><i class="fab fa-twitter"></i></a>
-				<a href="link to discord"><i class="fab fa-discord"></i></a>
+				<a href="https://www.instagram.com/sharewheels_/"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.bing.com/ck/a?!&&p=6edb7e9714a23654JmltdHM9MTcwMzQ2MjQwMCZpZ3VpZD0xYzI5MzkzOS1lOGRiLTY5YjUtMDQ5Ni0yYWNiZTkyZTY4ZGUmaW5zaWQ9NTE3NA&ptn=3&ver=2&hsh=3&fclid=1c293939-e8db-69b5-0496-2acbe92e68de&psq=twitter+sharewheels&u=a1aHR0cHM6Ly90d2l0dGVyLmNvbS9zaGFyZXdoZWVsc18&ntb=1"><i class="fab fa-twitter"></i></a>
+				<a href="https://discord.gg/J4HgxqPBVe"><i class="fab fa-discord"></i></a>
 			</div>
 		</div>
 	</div>
 	<div class="footer-end">
-		<p>Copyright 2023 and that C icon.</p>
-		<a href="IDK">Terms and Conditions</a>
+		<p>Copyright @ShareWheels 2023 </p>
 	</div>
 
 	<script src="./assets/js/index.js"></script>
