--- a/giveride.html
+++ b/giveride.html
@@ -7,6 +7,7 @@
 
 	<!-- Import External files -->
 	<link rel="stylesheet" href="./assets/css/index.css">
+	<link rel="stylesheet" href="./assets/css/bookride.css">
 
 
 	<!-- Import google fonts -->
@@ -29,22 +30,130 @@
 				<a href="./about.html">ABOUT US</a>
 				<div id="givetake-buttons">
 					<div id="button-container">
-						<a href="./bookride.html">BOOK</a>
-						<a id="current" href="./giveride.html">GIVE</a>
+						<a id="current" href="./bookride.html">BOOK</a>
+						<a href="./giveride.html">GIVE</a>
 					</div>
 					<p>RIDE</p>
 				</div>
-				<a href="./help.html">HELP</a>
+				<a href="./faq.html">HELP</a>
 				</div>
-				<div class="login">
-					<a href="signup.html">Login<span><i class="fas fa-chevron-down"></i></span></a>
-					<div class="login-menu">
-						<p> Don't have accout? create one</p>
-						<a href="signup">Create Account</a>
-					</div>
-				</div>
+                <div class="login">
+                    <a href="signup.html">Login<span><i class="fas fa-chevron-down"></i></span></a>
+                    <div class="login-menu">
+                        <p> Don't have accout? create one</p>
+                        <a href="signup">Create Account</a>
+                    </div>
+                </div>
 		</div>
 	</div>
+
+
+    <!-- Input Bar -->
+	<div class="wallpaper">
+		<img src="./assets/img/304bdf3a77ca017221619d2bff55f580.jpg">
+        <p id="message">Give Someone A Ride.</p>
+	</div>
+
+
+    <!-- Results Fields -->
+    <div class="result-tab">
+
+        <div class="left-tab">
+            <div class="search-bar">
+                <input type="search" placeholder="Search for places..." style="width: 300px;" onclick="function1()">
+                <button><i class="fas fa-search"></i></button>
+            </div>
+            <p id="head">Short By</p>
+            <div class="price">
+                <input id="range-slider" type="range">
+                <div id="price-range">
+                    <input value="100">
+                    <input value="999">
+                </div>
+            </div>
+        </div>
+
+        <div class="right-tab">
+            <p id="heading">Results:</p>
+            <div class="item">
+                <div class="left">
+                    <img src="./assets/img/users/1.png">
+                    <p id="name">Harish Kashyap</p>
+                    <p id="user-points"><i class="fas fa-star"></i> <span>20</span></p>
+                    <a href="https://wa.me/9909099909" target="_blank" id="message"><i class="fab fa-whatsapp"></i></a>
+                </div>
+
+                <div class="right">
+                    <div class="destination">
+                        <p id="from">Samba<span>19:00</span></p>
+                        <p><i class="fas fa-arrow-right"></i> </p>
+                        <p id="to">Vijaypur<span>20:00</span></p>
+                    </div>
+
+                    <p id="price">Price: <span>20.00$</span></p>
+
+                    <div class="bottom">
+                        <p id="vehicle-type">Type: <span>Car</span></p>
+                        <p id="vehicle-number">JK21A25</p>
+                        <p id=""></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="left">
+                    <img src="./assets/img/users/2.png">
+                    <p id="name">Saksham Jamwal</p>
+                    <p id="user-points"><i class="fas fa-star"></i> <span>8</span></p>
+                    <a href="https://wa.me/9909099909" target="_blank" id="message"><i class="fab fa-whatsapp"></i></a>
+                </div>
+
+                <div class="right">
+                    <div class="destination">
+                        <p id="from">Samba<span>19:00</span></p>
+                        <p><i class="fas fa-arrow-right"></i> </p>
+                        <p id="to">Vijaypur<span>20:00</span></p>
+                    </div>
+
+                    <p id="price">Price: <span>18.00$</span></p>
+
+                    <div class="bottom">
+                        <p id="vehicle-type">Type: <span>Bike</span></p>
+                        <p id="vehicle-number">JK02A325</p>
+                        <p id=""></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="left">
+                    <img src="./assets/img/users/3.png">
+                    <p id="name">Nitish</p>
+                    <p id="user-points"><i class="fas fa-star"></i> <span>20</span></p>
+                    <a href="https://wa.me/9909099909" target="_blank" id="message"><i class="fab fa-whatsapp"></i></a>
+                </div>
+
+                <div class="right">
+                    <div class="destination">
+                        <p id="from">Jammu<span>15:00</span></p>
+                        <p><i class="fas fa-arrow-right"></i> </p>
+                        <p id="to">Kathua<span>20:00</span></p>
+                    </div>
+
+                    <p id="price">Price: <span>50.00$</span></p>
+
+                    <div class="bottom">
+                        <p id="vehicle-type">Type: <span>Car</span></p>
+                        <p id="vehicle-number">JK212225</p>
+                        <p id=""></p>
+                    </div>
+                </div>
+            </div>
+
+            </div>
+        </div>
+    </div>
+
 
 	<!-- Footer -->
 	<div class="footer">
@@ -90,6 +199,6 @@
 		<p>Copyright 2023 and that C icon.</p>
 		<a href="IDK">Terms and Conditions</a>
 	</div>
-
+    <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>6573fd8491144160ce314cc4,6573fd21478d273f284ecb90</script>
 </body>
 </html>
